project pictures added

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </header>
                 <div id = "project-samples">
                     <div class = "project-tile">
-                        <a href = "https://github.com/sandipkatel/Tribute-Page" target = "_blank"><img src = "https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt = "Free code camp's project Tribute Page"/>
+                        <a href = "https://github.com/sandipkatel/Tribute-Page" target = "_blank"><img src = "./Dependencies/Projects/tribute_page.png" alt = "Free code camp's project Tribute Page"/>
                         <h4>Tribute Page</h4></a>
                     </div>
                     <div class = "project-tile">
@@ -116,20 +116,22 @@
                         <h4>My Portfolio Website</h4></a>
                     </div>
                     <div class = "project-tile">
+                        <a href = "https://github.com/sandipkatel/Sudoku.git" alt = "_blank">
+                            <img src = "./Dependencies/Projects/sudoku.png" alt = "Sample Project4" />
+                            <h4>Sudoku</h4>
+                        </a>
+                    </div>
+                    <div class = "project-tile">
                         <img src = "https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt = "Sample Project3" />
                         <h4>Calculator</h4>
                     </div>
                     <div class = "project-tile">
                         <img src = "https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt = "Sample Project4" />
-                        <h4>Cat and Dog Seperator</h4>
+                        <h4>Cat and Dog Image Seperator</h4>
                     </div>
                     <div class = "project-tile">
                         <img src = "https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt = "Sample Project4" />
-                        <h4>Cat and Dog Seperator</h4>
-                    </div>
-                    <div class = "project-tile">
-                        <img src = "https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt = "Sample Project4" />
-                        <h4>Cat and Dog Seperator</h4>
+                        <h4>Tic Tac Toe</h4>
                     </div>
                 </div>
                 <div class = "button">
