fixed nav-bar font for landscape

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav id = "nav1">
                 <ul>
                     <li class = "links"><a href = "#welcome-section"><i class="fas fa-house"></i><br>Home</a></li>
-                    <li class = "links"><a href = "#hero"><i class="fas fa-user"></i><br>About</a></li>
+                    <li class = "links"><a href = "#about-me"><i class="fas fa-user"></i><br>About</a></li>
                     <li class = "links"><a href = "#projects"><i class="fas fa-terminal"></i><br>Projects</a></li>
                     <li class = "links"><a href = "#contact"><i class="fas fa-envelope"></i><br>Contact</a></li>
                 </ul>
@@ -21,7 +21,7 @@
             <nav id = "nav2">
                 <ul>
                     <li class = "links"><a href = "#welcome-section">Home</a></li>
-                    <li class = "links"><a href = "#hero">About</a></li>
+                    <li class = "links"><a href = "#about-me">About</a></li>
                     <li class = "links"><a href = "#projects">Projects</a></li>
                     <li class = "links"><a href = "#contact">Contact</a></li>
                 </ul>
@@ -39,7 +39,7 @@
                     <img src="./Dependencies/Sandip.png" alt = "Profile Picture" />
                 </div>
             </div>
-            <div id = "hero">
+            <div id = "about-me">
                 <header>
                     <h1><u>About Me</u></h1>
                 </header>
