--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
                                 <th>Name: </th>
                                 <td>Sandip Katel</td>
                             </tr>
-                            <tr>
+                            <!-- <tr>
                                 <th>Date of Birth: </th>
                                 <td>21<sup>st</sup> November, 2002</td>
-                            </tr>
+                            </tr> -->
                             <tr>
                                 <th>Profession: </th>
                                 <td>Student</td>
                             </tr>
-                            <tr>
+                            <!-- <tr>
                                 <th>Address: </th>
                                 <td>Bagbazar, Kathmandu</td>
-                            </tr>
+                            </tr> -->
                             <tr>
                                 <th>College: </th>
                                 <td>Pulchowk Engineering Campus, IOE</td>
@@ -98,8 +98,11 @@
                         </tbody>
                     </table>
                 </section>
-                <section class = "resume button">
+                <!-- <section class = "resume button">
                     <a href = "./Dependencies/My_resume.pdf" download="Sandip-Resume" target="_blank"><button type="button"><i class="fa-solid fa-download"></i>  Download Resume</button></a>
+                </section> -->
+                <section class = "resume button">
+                    <a href = "./" download="Sandip-Resume" target="_blank"><button type="button"><i class="fa-solid fa-download"></i>  Download Resume</button></a>
                 </section>
             </div>
             <div id = "projects">
