--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
                             <tr>
                                 <th>Name: </th>
                                 <td>Sandip Katel</td>
-                            </tr>
+                            </tr> 
                             <!-- <tr>
                                 <th>Date of Birth: </th>
                                 <td>21<sup>st</sup> November, 2002</td>
                             </tr> -->
-                            <tr>
+                            <!-- <tr>
                                 <th>Profession: </th>
                                 <td>Student</td>
-                            </tr>
+                            </tr> -->
                             <!-- <tr>
                                 <th>Address: </th>
                                 <td>Bagbazar, Kathmandu</td>
                             </tr> -->
                             <tr>
                                 <th>College: </th>
-                                <td>Pulchowk Engineering Campus, IOE</td>
+                                <td>Pulchowk Campus, IOE</td>
                             </tr>
                             <tr>
                                 <th>Degree of Major: </th>
@@ -97,13 +97,13 @@
                             </tr>
                         </tbody>
                     </table>
+                </section> 
+                <section class = "resume button">
+                    <a href = "./Dependencies/cv.pdf" download="Sandip-CV" target="_blank"><button type="button"><i class="fa-solid fa-download"></i>Download CV</button></a>
                 </section>
                 <!-- <section class = "resume button">
-                    <a href = "./Dependencies/My_resume.pdf" download="Sandip-Resume" target="_blank"><button type="button"><i class="fa-solid fa-download"></i>  Download Resume</button></a>
-                </section> -->
-                <section class = "resume button">
                     <a href = "./" download="Sandip-Resume" target="_blank"><button type="button"><i class="fa-solid fa-download"></i>  Download Resume</button></a>
-                </section>
+                </section> -->
             </div>
             <div id = "projects">
                 <header>
@@ -208,3 +208,4 @@
         </footer>
     </body>
 </html>
+
