--- a/index.html
+++ b/index.html
@@ -3,7 +3,122 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
     <title>Sandip Katel</title>
+    <meta
+      name="title"
+      content="Sandip Katel - AI/ML Engineer & Full-Stack Developer | Computer Engineering Student"
+    />
+    <meta
+      name="description"
+      content="Sandip Katel - R&D Engineer at HuSig AI specializing in AI/ML, Full-Stack Development, Computer Vision, Generative AI, React.js, Python, PyTorch. Award-winning developer from Pulchowk Campus with expertise in RAG, LLaMA, and modern web frameworks."
+    />
+    <meta
+      name="keywords"
+      content="Sandip Katel, AI Engineer, Machine Learning Engineer, Full-Stack Developer, Computer Vision, Generative AI, React Developer, Python Developer, PyTorch, RAG Architecture, LLaMA, HuSig AI, Pulchowk Campus, IOE, Computer Engineering, Nepal, AI Developer Nepal, Web Developer Nepal, YOLO, OpenCV, Next.js, FastAPI, Synthetic Data, Data Science, Deep Learning, Neural Networks, TensorFlow, Hugging Face, Automation, API Development, Frontend Developer, Backend Developer"
+    />
+    <meta name="author" content="Sandip Katel" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://skatel.com.np/" />
+    <meta
+      property="og:title"
+      content="Sandip Katel - AI/ML Engineer & Full-Stack Developer"
+    />
+    <meta
+      property="og:description"
+      content="R&D Engineer at HuSig AI | Award-winning AI/ML Developer | Specializing in Generative AI, Computer Vision, and Full-Stack Development | Pulchowk Campus"
+    />
+    <meta
+      property="og:image"
+      content="https://skatel.com.np/Dependencies/under-maintenance.png"
+    />
+    <meta property="og:site_name" content="Sandip Katel Portfolio" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://skatel.com.np/" />
+    <meta
+      name="twitter:title"
+      content="Sandip Katel - AI/ML Engineer & Full-Stack Developer"
+    />
+    <meta
+      name="twitter:description"
+      content="R&D Engineer at HuSig AI | Expertise in AI/ML, Computer Vision, Generative AI, React.js, Python, PyTorch | Award-winning Developer"
+    />
+    <meta
+      name="twitter:image"
+      content="https://skatel.com.np/Dependencies/under-maintenance.png"
+    />
+    <meta name="twitter:creator" content="@katelsandip" />
+    <meta name="twitter:site" content="@katelsandip" />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="geo.region" content="NP-BA" />
+    <meta name="geo.placename" content="Kathmandu" />
+    <meta name="geo.position" content="27.7172;85.3240" />
+    <meta name="ICBM" content="27.7172, 85.3240" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://skatel.com.np/" />
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Sandip Katel",
+        "url": "https://skatel.com.np",
+        "image": "https://skatel.com.np/Dependencies/under-maintenance.png",
+        "sameAs": [
+          "https://www.linkedin.com/in/sandipkatel/",
+          "https://github.com/sandipkatel",
+          "https://facebook.com/sandipkatel03",
+          "https://instagram.com/__sandip_katel__",
+          "https://x.com/katelsandip"
+        ],
+        "jobTitle": "R&D Engineer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "HuSig AI"
+        },
+        "alumniOf": {
+          "@type": "CollegeOrUniversity",
+          "name": "Pulchowk Campus, Institute of Engineering, Tribhuvan University"
+        },
+        "knowsAbout": [
+          "Artificial Intelligence",
+          "Machine Learning",
+          "Computer Vision",
+          "Generative AI",
+          "Full-Stack Development",
+          "React.js",
+          "Python",
+          "PyTorch",
+          "Deep Learning",
+          "RAG Architecture",
+          "LLaMA",
+          "Natural Language Processing",
+          "Web Development",
+          "FastAPI",
+          "Next.js"
+        ],
+        "email": "sandip@skatel.com.np",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Kathmandu",
+          "addressRegion": "Bagmati Province",
+          "addressCountry": "NP"
+        }
+      }
+    </script>
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
