update facebook handle

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
               <i class="fab fa-github"></i>
             </a>
             <a
-              href="https://facebook.com/sandipkatel03"
+              href="https://facebook.com/sandip.katel.3"
               target="_blank"
               class="social-link"
               title="Facebook"
