--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         }
       }
     </script>
-
+    <link rel="icon" href="./Dependencies/blue_sandip.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
